--- a/engine/core/displays/list/list.css
+++ b/engine/core/displays/list/list.css
@@ -1,33 +1,40 @@
-table.xyz-create, table.xyz-item, table.xyz-list {
-    /*border: 1px solid lightgrey;
-    margin-bottom: 5px;*/
-    padding: 0;
-    border-collapse: collapse;
-    table-layout: fixed;
-    background-color: white;
+table.xyz-create,
+table.xyz-item,
+table.xyz-list {
+  /* border: 1px solid lightgrey;
+    margin-bottom: 5px; */
+  padding: 0;
+  border-collapse: collapse;
+  table-layout: fixed;
+  background-color: white;
 }
 
-table.xyz-create tr:nth-child(even), table.xyz-item tr:nth-child(even), table.xyz-list tr:nth-child(even) {
-    background: rgba(155, 155, 155, 0.2);
+table tbody:first-child tr.xyz-create-header,
+table tbody:first-child tr.xyz-list-header,
+table tbody:first-child tr.xyz-item-header {
+  background-color: darkslateblue;
+  color: white;
 }
 
-.xyz-create-header, .xyz-list-header, .xyz-item-header {
-    background-color: darkslateblue;
-    color: white;
+table.xyz-create tr:nth-child(even),
+table.xyz-item tr:nth-child(even),
+table.xyz-list tr:nth-child(even) {
+  background: rgba(155, 155, 155, 0.2);
 }
 
-.xyz-list, .xyz-item {
-    width: 100%;
+.xyz-list,
+.xyz-item {
+  width: 100%;
 }
 
 .xyz-list-item {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 table.xyz-list tr.xyz-list-item:hover {
-    background-color: lightblue;
+  background-color: lightblue;
 }
 
 table.xyz-list tr.xyz-list-selected {
-    background-color: yellow;
+  background-color: yellow;
 }
