--- a/engine/ui/style.css
+++ b/engine/ui/style.css
@@ -143,7 +143,179 @@ DOC
   background-color: lightgreen;
 }
 .xyz-doc-tryIt::before { content: "Try it!"; }
-@charset "UTF-8";
+table.xyz-create,
+table.xyz-item,
+table.xyz-list {
+  /* border: 1px solid lightgrey;
+    margin-bottom: 5px; */
+  padding: 0;
+  border-collapse: collapse;
+  table-layout: fixed;
+  background-color: white;
+}
+
+.xyz-list-header,
+.xyz-create-header,
+.xyz-item-header,
+table tbody:first-child tr.xyz-create-header,
+table tbody:first-child tr.xyz-list-header,
+table tbody:first-child tr.xyz-item-header {
+  background-color: darkslateblue;
+  color: white;
+}
+
+table.xyz-create tr:nth-child(even),
+table.xyz-item tr:nth-child(even),
+table.xyz-list tr:nth-child(even) {
+  background: rgba(155, 155, 155, 0.2);
+}
+
+.xyz-list,
+.xyz-item {
+  width: 100%;
+}
+
+table.xyz-list tr.xyz-list-selectable {
+  cursor: pointer;
+}
+
+table.xyz-list tr.xyz-list-selectable:hover {
+  background-color: lightblue;
+}
+
+table.xyz-list tr.xyz-list-selected {
+  background-color: yellow;
+}
+
+td.xyz-list-icon {
+  width: 30px;
+  max-width: 30px;
+}
+.xyz-map-wrapper {
+  border-color: black;
+
+  /* b ackground-color: lightgreen; */
+}
+div.xyz-timeline-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+div.xyz-timeline-node {
+    transform: translate(-50%,-50%);
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    background-color: green;
+}
+
+div.xyz-timeline-connector {
+    z-index:1;
+    position: absolute;
+    width: 100px;
+    height: 4px;
+    background-color: green;
+}
+
+div.xyz-timeline-label {
+    z-index:2;
+    position: absolute;
+    padding:10px;
+    color:white;
+    border-radius: 10px;
+    background-color: green;
+}
+
+div.xyz-timeline-label:hover {
+    cursor: pointer;
+    background-color: rgb(0,200,0);
+}
+div.xyz-timeline-label.xyz-list-selected {
+    color:black;
+    background-color: yellow;
+}
+
+div.xyz-timeline-line-creator {
+    position: absolute;
+    width:10px;
+    height:10px;
+    pointer-events: none;
+    cursor: none;
+    /*display: none;*/
+}
+
+
+div.xyz-timeline-line {
+    transform: translate(-50%,-50%);
+    position: absolute;
+    top:50%;
+    left:50%;
+    height: 100%;
+    width:2px;
+    background-color: black;
+}
+.xyz-file-container {
+    background-color: darkgray;
+    padding: 10px;
+    margin:0;
+    overflow:scroll;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    max-width: calc(100% - 20px);
+    max-height: calc(70vh - 20px);
+}
+
+.xyz-file-flat {
+    font-family: monospace;
+    white-space: pre-wrap;
+    /*box-shadow: 2px 2px 2px;*/
+    background-color: white;
+    padding: 10px;
+}.xyz-login a {
+  color: blue;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.xyz-login a:hover {
+  text-decoration: underline;
+}
+
+.xyz-login-message {
+  background-color: khaki;
+  color: black;
+  border-radius: 5px;
+  text-align: center;
+  animation-iteration-count: 1;
+  animation-duration: 10s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes xyz-login-hide {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.xyz-login-capslock-notifier {
+  color: red;
+}
+
+.xyz-reference {
+    cursor: pointer;
+}
+
+.xyz-reference:hover {
+    background-color: lightblue;
+}@charset "UTF-8";
 
 /*!
  * Pikaday
@@ -382,176 +554,3 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     cursor: help;
 }
 
-
-.xyz-file-container {
-    background-color: darkgray;
-    padding: 10px;
-    margin:0;
-    overflow:scroll;
-    height: calc(100% - 20px);
-    width: calc(100% - 20px);
-    max-width: calc(100% - 20px);
-    max-height: calc(70vh - 20px);
-}
-
-.xyz-file-flat {
-    font-family: monospace;
-    white-space: pre-wrap;
-    /*box-shadow: 2px 2px 2px;*/
-    background-color: white;
-    padding: 10px;
-}.xyz-login a {
-  color: blue;
-  cursor: pointer;
-  margin: 5px;
-}
-
-.xyz-login a:hover {
-  text-decoration: underline;
-}
-
-.xyz-login-message {
-  background-color: khaki;
-  color: black;
-  border-radius: 5px;
-  text-align: center;
-  animation-iteration-count: 1;
-  animation-duration: 10s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes xyz-login-hide {
-  from {
-    visibility: visible;
-    opacity: 1;
-  }
-
-  to {
-    visibility: hidden;
-    opacity: 0;
-  }
-}
-
-.xyz-login-capslock-notifier {
-  color: red;
-}
-
-.xyz-reference {
-    cursor: pointer;
-}
-
-.xyz-reference:hover {
-    background-color: lightblue;
-}table.xyz-create,
-table.xyz-item,
-table.xyz-list {
-  /* border: 1px solid lightgrey;
-    margin-bottom: 5px; */
-  padding: 0;
-  border-collapse: collapse;
-  table-layout: fixed;
-  background-color: white;
-}
-
-.xyz-list-header,
-.xyz-create-header,
-.xyz-item-header,
-table tbody:first-child tr.xyz-create-header,
-table tbody:first-child tr.xyz-list-header,
-table tbody:first-child tr.xyz-item-header {
-  background-color: darkslateblue;
-  color: white;
-}
-
-table.xyz-create tr:nth-child(even),
-table.xyz-item tr:nth-child(even),
-table.xyz-list tr:nth-child(even) {
-  background: rgba(155, 155, 155, 0.2);
-}
-
-.xyz-list,
-.xyz-item {
-  width: 100%;
-}
-
-table.xyz-list tr.xyz-list-selectable {
-  cursor: pointer;
-}
-
-table.xyz-list tr.xyz-list-selectable:hover {
-  background-color: lightblue;
-}
-
-table.xyz-list tr.xyz-list-selected {
-  background-color: yellow;
-}
-
-td.xyz-list-icon {
-  width: 30px;
-  max-width: 30px;
-}
-.xyz-map-wrapper {
-  border-color: black;
-
-  /* b ackground-color: lightgreen; */
-}
-div.xyz-timeline-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-div.xyz-timeline-node {
-    transform: translate(-50%,-50%);
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    border-radius: 10px;
-    background-color: green;
-}
-
-div.xyz-timeline-connector {
-    z-index:1;
-    position: absolute;
-    width: 100px;
-    height: 4px;
-    background-color: green;
-}
-
-div.xyz-timeline-label {
-    z-index:2;
-    position: absolute;
-    padding:10px;
-    color:white;
-    border-radius: 10px;
-    background-color: green;
-}
-
-div.xyz-timeline-label:hover {
-    cursor: pointer;
-    background-color: rgb(0,200,0);
-}
-div.xyz-timeline-label.xyz-list-selected {
-    color:black;
-    background-color: yellow;
-}
-
-div.xyz-timeline-line-creator {
-    position: absolute;
-    width:10px;
-    height:10px;
-    pointer-events: none;
-    cursor: none;
-    /*display: none;*/
-}
-
-
-div.xyz-timeline-line {
-    transform: translate(-50%,-50%);
-    position: absolute;
-    top:50%;
-    left:50%;
-    height: 100%;
-    width:2px;
-    background-color: black;
-}
