--- a/engine/core/displays/map/map.css
+++ b/engine/core/displays/map/map.css
@@ -3,3 +3,18 @@
 
   /* b ackground-color: lightgreen; */
 }
+
+.ol-zoom-in,
+.ol-zoom-out {
+  float: right;
+  background-color: darkslateblue;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.ol-rotate-reset,
+.ol-attribution {
+  display: none;
+}
